--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ background-color: #3b3b3b;
     width: 100%;
     height: 2rem;
     justify-content: space-between;
+    color: #000 !important;
 }
 .setting-ul ul li input{
     outline: none;
@@ -167,11 +168,8 @@ background-color: #3b3b3b;
 
 .container .operationBtn button:active {
     transform: scale(.96);
-
 }
-
 .container .operationBtn button:focus {
-    cursor: not-allowed;
     color: #424242;
     transform: scale(1);
 }
@@ -188,6 +186,9 @@ margin-right:1rem ;
         font-size: 1.2rem;
     }
     .setting  {
+        right: 1rem;
+    }
+    .setting-ul{
         right: 1rem;
     }
 }
